# caregiver-sst

./: .dockerignore  .gitignore  DOCKER_DEPLOYMENT.md  DOCKER_SETUP.md  Dockerfile  FULLSTACK_SETUP.md  README.md  app.py  docker-compose.prod.yml  docker-compose.yml  docker-deploy.bat  docker-deploy.sh  inference.py  openenv.yaml  push_hf.py  pyproject.toml  requirements.txt  train.py  upload_hf.py
backend/: Dockerfile  package-lock.json  package.json  server.js
env/: carematch_env.py  llm_client.py
frontend/: Dockerfile  OPENAI_SETUP.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  Chatbot.css  Chatbot.jsx  chatbotKB.js  index.css
server/: __init__.py  app.py
