[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "carematch-rl"
version = "0.1.0"
description = "CareMatch RL OpenEnv environment server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "gymnasium>=0.29.0",
  "stable-baselines3[extra]>=2.3.0",
  "torch>=2.0.0",
  "fastapi",
  "uvicorn",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"
